--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -27,6 +27,8 @@
 % \subtitle{The Decentralized Autonomous Organization}
 \author{Ramon Boss, Anna Doukmak}
 
+\date{2019-06-13}
+
 \frame{\titlepage}
 
 \begin{frame}
