--- a/doc/template.tex
+++ b/doc/template.tex
@@ -86,7 +86,7 @@
 	bookmarksopen = {true},               % opens the bar on the left side
 	bookmarksopenlevel = {0},             % depth of opened bookmarks
 	bookmarksopenlevel = {0},             % depth of opened bookmarks
-	pdftitle = {Template fuer Bachelor Thesis},	   	% PDF-property
+	pdftitle = {Formal Verification in Scala},	   	% PDF-property
 	pdfauthor = {brd3},        					  % PDF-property
 	pdfsubject = {LaTeX Template},        % PDF-property
 	linkcolor = {linkcolor},              % Color of Links
