--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -79,14 +79,14 @@ def max(x: Int, y: Int): Int = {
 \frametitle{Properties}
 \begin{itemize}
   \item Bitcoin-S
-  \item No Inflation Property
-  \item Addition with Zero Property
+  \item No-Inflation Property
+  \item Addition-with-Zero Property
 \end{itemize}
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Problems Rewriting Code}
+\section{Problems Verifying Bitcoin-S}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -168,7 +168,7 @@ Becomes this:
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Results}
+\section{Conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
