--- a/doc/leader/frontpage_without_picture.tex
+++ b/doc/leader/frontpage_without_picture.tex
@@ -31,7 +31,7 @@
 \vspace{5mm}
 
 \fontsize{10pt}{12pt}\selectfont
-\textbf{Bachelor thesis} \\		% Insert text
+\textbf{Bachelor Thesis} \\		% Insert text
 \vspace{7mm}
 
 % Abstract (eingeben):
