--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -1,6 +1,9 @@
 \documentclass{beamer}
 
 \usepackage{listings}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+\usepackage[utf8]{inputenc}
 \input{solidity-highlighting.tex}
 
 \usecolortheme{beaver}
@@ -64,6 +67,19 @@
 \frametitle{Example: max}
 \begin{lstlisting}[language=Scala]
 def max(x: Int, y: Int): Int = {
+  val d = x - y
+  if (d > 0) x
+  else y
+}
+\end{lstlisting}
+\blfootnote{\url{https://epfl-lara.github.io/stainless/tutorial.html\#warm-up-max}}
+\end{frame}
+
+
+\begin{frame}[fragile]
+\frametitle{Example: max}
+\begin{lstlisting}[language=Scala]
+def max(x: Int, y: Int): Int = {
   require(0 <= x && 0 <= y)
   val d = x - y
   if (d > 0) x
@@ -72,6 +88,52 @@ def max(x: Int, y: Int): Int = {
   x <= res && y <= res && (res == x || res == y))
 \end{lstlisting}
 \blfootnote{\url{https://epfl-lara.github.io/stainless/tutorial.html\#warm-up-max}}
+\end{frame}
+
+
+\begin{frame}[fragile]
+\frametitle{Example: max}
+{\small\begin{verbatim}
+  [...     ]
+  [Warning ]  => INVALID
+  [Warning ] Found counter-example:[Warning ]   x: Int -> 1
+  [Warning ]   y: Int -> -2147483648
+  [  Info  ]  - Result for 'postcondition' VC for max @2:3:
+  [Warning ]  => INVALID
+  [Warning ] Found counter-example:
+  [Warning ]   x: Int -> -2147483648
+  [Warning ]   y: Int -> 2147483647
+  [...     ]
+\end{verbatim}}
+% \begin{verbatim}
+%   [Warning ] The Z3 native interface is not available. Falling back onto smt-z3.
+% [  Info  ]  - Checking cache: 'postcondition' VC for max @2:3...
+% [  Info  ]  - Checking cache: 'postcondition' VC for max @2:3...
+% [  Info  ] Cache miss: 'postcondition' VC for max @2:3...
+% [  Info  ] Cache miss: 'postcondition' VC for max @2:3...
+% [  Info  ]  - Now solving 'postcondition' VC for max @2:3...
+% [  Info  ]  - Now solving 'postcondition' VC for max @2:3...
+% [  Info  ]  - Result for 'postcondition' VC for max @2:3:
+% [Warning ]  => INVALID
+% [Warning ] Found counter-example:
+% [Warning ]   x: Int -> 1
+% [Warning ]   y: Int -> -2147483648
+% [  Info  ]  - Result for 'postcondition' VC for max @2:3:
+% [Warning ]  => INVALID
+% [Warning ] Found counter-example:
+% [Warning ]   x: Int -> -2147483648
+% [Warning ]   y: Int -> 2147483647
+% [  Info  ]   ┌───────────────────┐
+% [  Info  ] ╔═╡ stainless summary ╞══════════════════════════════════════════════════════════════════════╗
+% [  Info  ] ║ └───────────────────┘                                                                      ║
+% [  Info  ] ║ max    postcondition          invalid      U:smt-z3       Test.scala:2:3          0.908    ║
+% [  Info  ] ║ max    postcondition          invalid      U:smt-z3       Test.scala:2:3          0.906    ║
+% [  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
+% [  Info  ] ║ total: 2    valid: 0    (0 from cache) invalid: 2    unknown: 0    time:   1.814           ║
+% [  Info  ] ╚════════════════════════════════════════════════════════════════════════════════════════════╝
+% [  Info  ] Shutting down executor service.
+
+% \end{verbatim}
 \end{frame}
 
 
