added some points

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -247,10 +247,12 @@ sealed abstract class Number {
 \end{frame}
 
 \begin{frame}
-\frametitle{Lessons Learned}
+\frametitle{Conclusion}
 \begin{itemize}
-  \item Write Verifiable Code
-  \item We Verified Not Original Bitcoin-S Code
+  \item Write verifiable code
+  \item We verified not original Bitcoin-S code
+  \item Found a bug in Bitcoin-S
+  \item Provided feedback to Stainless developers
 \end{itemize}
 \end{frame}
 
