Changed the title

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 
-\title{Formal Verification in Scala}
+\title{Experiments in Formal Verification of Scala code}
 % \subtitle{The Decentralized Autonomous Organization}
 \author{Ramon Boss, Anna Doukmak}
 
