--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -35,11 +35,11 @@
 
 \begin{document}
 
-\title{Experiments in Formal Verification of Scala code}
+\title{Experiments in Formal Verification of Scala Code}
 % \subtitle{The Decentralized Autonomous Organization}
 \author{Ramon Boss, Anna Doukmak}
 
-\date{2019-06-13}
+\date{2019-06-14}
 
 \frame{\titlepage}
 
