--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,15 +1,9 @@
-%
-% BibTex Database
-% ===========================================================================
-% This is part of the document "Project documentation template".
-% Authors: brd3
-%
 
 
 @misc{Stainless:documentation,
   author = "{Stainless documentation}",
   url = {https://epfl-lara.github.io/stainless/},
-  note = {Accessed 2019-06-20}
+  note = {Accessed 2019-06-19}
 }
 
 @misc{Stainless:github,
@@ -28,8 +22,10 @@
 }
 
 @misc{cve201817144,
+  author = {Jimmy Song},
   title = {{Bitcoin Core Bug CVE-2018–17144: An Analysis}},
-  url = {https://hackernoon.com/bitcoin-core-bug-cve-2018-17144-an-analysis-f80d9d373362}
+  url = {https://hackernoon.com/bitcoin-core-bug-cve-2018-17144-an-analysis-f80d9d373362},
+  note = {Accessed 2019-06-20}
 }
 
 @inproceedings{DBLP:conf/pldi/VoirolKK15,
@@ -71,9 +67,38 @@
                2015, Portland, OR, USA, June 15-17, 2015},
   publisher = {{ACM}},
   year      = {2015},
-  url       = {http://dl.acm.org/citation.cfm?id=2774975},
   isbn      = {978-1-4503-3626-0},
   timestamp = {Tue, 11 Apr 2017 09:25:21 +0200},
   biburl    = {https://dblp.org/rec/bib/conf/pldi/2015scala},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ecoop/BlancKKS13,
+  author    = {R{\'{e}}gis Blanc and
+               Viktor Kuncak and
+               Etienne Kneuss and
+               Philippe Suter},
+  title     = {An overview of the Leon verification system: verification by translation
+               to recursive functions},
+  booktitle = {Proceedings of the 4th Workshop on Scala, SCALA@ECOOP 2013, Montpellier,
+               France, July 2, 2013},
+  pages     = {1:1--1:10},
+  year      = {2013},
+  crossref  = {DBLP:conf/ecoop/2013scala},
+  doi       = {10.1145/2489837.2489838},
+  timestamp = {Tue, 06 Nov 2018 16:59:31 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ecoop/BlancKKS13},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/ecoop/2013scala,
+  title     = {Proceedings of the 4th Workshop on Scala, SCALA@ECOOP 2013, Montpellier,
+               France, July 2, 2013},
+  publisher = {{ACM}},
+  year      = {2013},
+  doi       = {10.1145/2489837},
+  isbn      = {978-1-4503-2064-1},
+  timestamp = {Tue, 06 Nov 2018 16:59:31 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/ecoop/2013scala},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
